Update core packages

--- a/core/llvm/build
+++ b/core/llvm/build
@@ -123,7 +123,7 @@ ln -s -f llvm-objcopy otool
 
 # symlinks to crtbegin/crtend files
 # This is mainly done for Rust.
-cd $1/usr/lib/clang/13.0.0/lib/linux
+cd $1/usr/lib/clang/$2/lib/linux
 install -Dm755 clang_rt.crtbegin-$libname.o $1/usr/lib/crtbegin.o
 install -Dm755 clang_rt.crtend-$libname.o   $1/usr/lib/crtend.o
 touch $1/usr/lib/crtbeginS.o
