--- a/extra/libglvnd/build
+++ b/extra/libglvnd/build
@@ -1,7 +1,5 @@
 #!/bin/sh -e
 
-sed -i "s/subdir('tests')//g" meson.build
-
 kiss-meson-config > meson.config
 
 meson \
@@ -9,7 +7,7 @@ meson \
     --cross-file="meson.config" \
     -Dgles1=true \
     -Dgles2=true \
-    -Dtls=disabled \
+    -Dtls=false \
     -Dasm=disabled \
     -Dglx=disabled \
     -Dentrypoint-patching=enabled \
