[zlib] Fix dynamic link path

--- a/core/zlib/build
+++ b/core/zlib/build
@@ -2,6 +2,8 @@
 
 export CFLAGS="$CFLAGS -fPIC"
 
+patch -p1 < cross.patch
+
 ./configure \
     --prefix=/usr \
     --archs="-arch $KISS_XHOST_ARCH"
