ERROR: Value of type "string" for combo option is not one of the choices

--- a/extra/mesa/build
+++ b/extra/mesa/build
@@ -49,6 +49,10 @@ case $KISS_XHOST_ARCH in
    *) echo "Unsupported platform: $(cc -dumpmachine)"; exit;;
 esac
 
+if [ -z "$LLVM" ] ; then
+    LLVM=enabled
+fi
+
 # Fix issues with musl and firefox.
 # https://bugs.freedesktop.org/show_bug.cgi?id=35268
 # https://github.com/mesa3d/mesa/commit/9f37c9903b87f86a533bfaffa72f0ecb285b02b2
