--- a/extra/gtk+3/build
+++ b/extra/gtk+3/build
@@ -41,31 +41,30 @@ mv -f _ Makefile.in
 
 # Point gtk+3 to the vendored libepoxy.
 export PKG_CONFIG_PATH=$PWD/libepoxy/usr/lib/pkgconfig:$PKG_CONFIG_PATH
-export CFLAGS="$CFLAGS -L$PWD/libepoxy/usr/lib -I $KISS_ROOT/usr/include/gdk-pixbuf-2.0  -I $KISS_ROOT/usr/include/atk-1.0"
+export CFLAGS="$CFLAGS -L$PWD/libepoxy/usr/lib "
 export CFLAGS="$CFLAGS -I$PWD/libepoxy/usr/include"
 export GLIB_COMPILE_RESOURCES=/usr/bin/glib-compile-resources
 
-sh ./configure \
-    --prefix=/usr \
-    --build=$KISS_XBUILD_TRIPLE \
-    --host=$KISS_XHOST_TRIPLE \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --enable-wayland-backend \
-    --disable-x11-backend \
-    --disable-schemas-compile \
-    --disable-cups \
-    --disable-papi \
-    --disable-cloudprint \
-    --disable-glibtest \
-    --disable-nls \
-    --disable-installed-tests \
-    --enable-introspection=no \
-    --enable-colord=no \
-    --enable-gtk-doc-html=no
+kiss-meson-config > meson.config
 
-make
-make install
+meson \
+    --prefix=/usr \
+    --cross-file="meson.config" \
+    -Dx11_backend=false \
+    -Dwayland_backend=true \
+    -Dquartz_backend=false \
+    -Dwin32_backend=false \
+    -Dintrospection=false \
+    -Ddemos=false \
+    -Dexamples=false \
+    -Dtests=false \
+    . build
+
+# Fix build file
+sed -i "s| /usr/lib/libEGL\.so| $KISS_ROOT/usr/lib/libEGL\.so|g" build/build.ninja
+
+ninja -C build
+DESTDIR=$1 ninja -C build install
 
 # GTK+3 on Wayland requires gsettings-desktop-schemas for gsettings to work
 # correctly. Under X11 it made use of xsettings but this is no longer the case.
