--- a/extra/rust/build
+++ b/extra/rust/build
@@ -1,22 +1,38 @@
 #!/bin/sh -e
 
-patch -p1 < openssl.patch
-patch -p1 < cross.patch
+unset CC
+unset CXX
+unset CFLAGS
+unset LDFLAGS
 
-# Set shared linking as the default.
-for f in \
-    compiler/rustc_target/src/spec/linux_musl_base.rs \
-    vendor/rustc-ap-rustc_target/src/spec/linux_musl_base.rs
-do
-    sed 's/\(crt_static_default = \)true/\1false/' "$f" > _
-    mv -f _ "$f"
-done
+patch -p1 < openssl.patch
+patch -p1 < glasnost.patch
+
+# std needs a musl root for each target
+build_musl() {(
+  cd musl
+  mkdir -p $2
+  export CC="clang --target=${1}"
+
+  ./configure \
+    --prefix="" \
+    --syslibdir=/lib \
+    --target=${1}
+
+  make CROSS_COMPILE=""
+  make CROSS_COMPILE="" DESTDIR="$2" install
+  make clean
+)}
+
+
+# Define all supported archs:
+archs="aarch64-unknown-linux-musl powerpc64-unknown-linux-musl powerpc64le-unknown-linux-musl x86_64-unknown-linux-musl"
+archlist="$(echo $archs | sed 's/[^ ][^ ]*/\"&\",/g' | sed 's/,$/\ /')"
 
 # Clear vendor checksums
 sed -i 's/\("files":{\)[^}]*/\1/' \
     vendor/openssl-sys/.cargo-checksum.json \
     vendor/openssl-src/.cargo-checksum.json \
-    vendor/rustc-ap-rustc_target/.cargo-checksum.json \
     vendor/libc/.cargo-checksum.json
 
 # Bootstrap correct version
@@ -30,7 +46,7 @@ target="$KISS_XHOST_ARCH-unknown-linux-$KISS_XHOST_ABI"
 # bootstrap library to allow for the removal of the internet
 # connection requirement per build.
 {
-    cache_dir="build/cache/2021-11-01"
+    cache_dir="build/cache/2022-02-24"
     mkdir -p $cache_dir
 
     for tarball in *.tar.xz\?no-extract; do
@@ -38,12 +54,15 @@ target="$KISS_XHOST_ARCH-unknown-linux-$KISS_XHOST_ABI"
     done
 }
 
-
 cat > config.toml <<EOF
+[llvm]
+link-shared     = false
+skip-rebuild    = true
+
 [build]
 build           =   "$build"
 host            = [ "$target" ]
-target          = [ "aarch64-unknown-linux-musl", "armv7-unknown-linux-musleabihf", "powerpc64-unknown-linux-musl", "powerpc64le-unknown-linux-musl", "x86_64-unknown-linux-musl" ]
+target          = [ $archlist ]
 docs            = false
 compiler-docs   = false
 extended        = true
@@ -61,71 +80,60 @@ full-bootstrap  = false
 prefix = "/usr"
 
 [rust]
-channel         = "stable"
-rpath           = true
-codegen-units   = 1
-backtrace       = false
-jemalloc        = false
-codegen-tests   = false
-llvm-libunwind  = "system"
-debug           = false
-debuginfo-level = 0
-optimize        = true
+channel           = "stable"
+rpath             = true
+codegen-units     = 0
+codegen-units-std = 1
+backtrace         = true
+jemalloc          = false
+codegen-tests     = false
+llvm-libunwind    = "in-tree"
+debug             = false
+debuginfo-level   = 0
+optimize          = true
+use-lld           = true
+llvm-tools        = true
+dist-src          = false
 
 EOF
 
 # Set up roots and compilers for each arch
-{
-    mkdir -p roots/bin
+mkdir -p roots
+roots="$(realpath roots)"
+for arch in $archs
+do
+    # Add arch to config.toml
+    cat >> config.toml <<EOF
 
-    for arch in aarch64 armv7 powerpc64 powerpc64le x86_64
-    do
-        _root="$PWD/roots/$arch"
-        sed "s|_kissRoot|$_root|g" cc-target  > roots/bin/cc-$arch
-        sed "s|_kissRoot|$_root|g" cxx-target > roots/bin/cxx-$arch
-
-        if [ "$arch" = "armv7" ]; then
-            target="armv7-unknown-linux-musleabihf"
-        else
-            target="$arch-unknown-linux-musl"
-        fi
-
-        sed -i "s|_targetArch|$target|g" roots/bin/cc-$arch
-        sed -i "s|_targetArch|$target|g" roots/bin/cxx-$arch
-
-        cat >> config.toml <<EOF
-
-[target.$target]
+[target.$arch]
 llvm-config = "/usr/bin/llvm-config"
-musl-root   = "$_root/usr"
-musl-libdir = "$_root/usr/lib"
 crt-static  = false
-cc          = "$(realpath roots/bin/cc-$arch)"
-cxx         = "$(realpath roots/bin/cxx-$arch)"
-linker      = "$(realpath roots/bin/cc-$arch)"
+cc          = "clang"
+cxx         = "clang++"
+linker      = "clang"
+sanitizers  = false
 EOF
 
-    done
-    chmod a+x roots/bin/*
-}
+    # If $arch is the target arch, root is $KISS_ROOT
+    # If $arch is the build arch, root is /
+    # Build a musl root otherwise.
+    case $arch in
+        $target)                                 envs="$envs LIBDIR_$arch=$KISS_ROOT/usr/lib"; echo "sysroot = \"${KISS_ROOT:-/}\"" >> config.toml;;
+        $build)                                  envs="$envs LIBDIR_$arch=/usr/lib";           echo "sysroot = \"/\""               >> config.toml;;
+        *)      build_musl $arch "$roots/$arch"; envs="$envs LIBDIR_$arch=$roots/$arch/lib";   echo "sysroot = \"$roots/$arch\""    >> config.toml;;
+    esac
 
+done
 
+# Do the build
 env \
-LIBDIR_aarch64-unknown-linux-musl="$(realpath roots/aarch64/usr/lib)" \
-LIBDIR_powerpc64-unknown-linux-musl="$(realpath roots/powerpc64/usr/lib)" \
-LIBDIR_powerpc64le-unknown-linux-musl="$(realpath roots/powerpc64le/usr/lib)" \
-LIBDIR_x86_64-unknown-linux-musl="$(realpath roots/x86_64/usr/lib)" \
-LIBDIR_armv7-unknown-linux-musleabihf="$(realpath roots/armv7/usr/lib)" \
-AARCH64_UNKNOWN_LINUX_MUSL_OPENSSL_DIR="$(realpath roots/aarch64/usr)" \
-POWERPC64_UNKNOWN_LINUX_MUSL_OPENSSL_DIR="$(realpath roots/powerpc64/usr)" \
-POWERPC64LE_UNKNOWN_LINUX_MUSL_OPENSSL_DIR="$(realpath roots/powerpc64le/usr)" \
-X86_64_UNKNOWN_LINUX_MUSL_OPENSSL_DIR="$(realpath roots/x86_64/usr)" \
-ARMV7_UNKNOWN_LINUX_MUSLEABIHF_OPENSSL_DIR="$(realpath roots/armv7/usr)" \
+$envs \
 CFLAGS="-Wno-unused-command-line-argument -Wno-shift-op-parentheses" \
 CXXFLAGS="-Wno-shift-op-parentheses" \
 LDFLAGS="" \
 RUSTFLAGS="" \
-DESTDIR="$1" python3 ./x.py -j "$(nproc)" install
+DESTDIR="$1" \
+python3 ./x.py -j "$(nproc)" install
 
 rm -rf "$1/usr/lib/rustlib/src/"
 rm -f  "$1/usr/lib/rustlib/uninstall.sh"
