--- a/extra/efivar/build
+++ b/extra/efivar/build
@@ -1,8 +1,8 @@
 #!/bin/sh -e
 
-patch -p1 < no-add-needed.patch
+# patch -p1 < no-add-needed.patch
 
-#CCLD="clang"
+# CCLD="clang"
 export CFLAGS="$CFLAGS -Wno-unused-command-line-argument"
 
 # Disable test program 'thread-test' as it causes build failures when using
