--- a/extra/qtwebengine.underconstruction/build
+++ b/extra/qtwebengine.underconstruction/build
@@ -1,4 +1,4 @@
-#!/bin/sh -e
+#!/usr/bin/env sh
 
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
