--- a/wayland/sway/build
+++ b/wayland/sway/build
@@ -1,24 +1,38 @@
 #!/usr/bin/env sh
 
 patch -p1 < no-evdev.patch
+patch -p1 < pcre2.patch
 
-sed -i "s/libinput = dependency('libinput', /libinput = dependency('libinput', static: true, /g" meson.build
+# Default background color.
+sed 's/0.25f, 0.25f, 0.25f/0.929, 0.870, 0.678/' \
+    sway/desktop/render.c > _
+mv -f _ sway/desktop/render.c
 
-# sed -i "s/void list_insert(list_t *list, int index, void *item);/inline void list_insert(list_t *list, int index, void *item);/g" include/list.h
-sed -i "s/void list_insert(list_t *list, int index, void *item);/inline void sway_list_insert(list_t *list, int index, void *item);/g" include/list.h
-sed -i "s/void list_insert(list_t *list, int index, void *item) {/void sway_list_insert(list_t *list, int index, void *item) {/g" common/list.c
+sed 's:output \* bg \@datadir\@/backgrounds/sway:# output \* bg \@datadir\@/backgrounds/sway:' \
+    ./config.in > _
+mv -f _ ./config.in
 
+# sed -i "s/libinput = dependency('libinput', /libinput = dependency('libinput', static: true, /g" meson.build
 
-# sed -i "s/sway_inc = include_directories('include')/sway_inc = include_directories('$1/include')/g" meson.build
-# sed -i "s/include_directories: [sway_inc],/include_directories: sway_inc,/g" ./sway/meson.build
-sed -i 's/#include "list.h"/#include "../include/list.h"/g' ./sway/config.c
-sed -i "s/list_insert(/sway_list_insert(/g" ./sway/config.c
-sed -i "s/list_insert(/sway_list_insert(/g" ./sway/tree/workspace.c
-sed -i "s/list_insert(/sway_list_insert(/g" ./sway/tree/container.c
+# # sed -i "s/void list_insert(list_t *list, int index, void *item);/inline void list_insert(list_t *list, int index, void *item);/g" include/list.h
+# sed -i "s/void list_insert(list_t *list, int index, void *item);/inline void sway_list_insert(list_t *list, int index, void *item);/g" include/list.h
+# sed -i "s/void list_insert(list_t *list, int index, void *item) {/void sway_list_insert(list_t *list, int index, void *item) {/g" common/list.c
+# 
+# 
+# # sed -i "s/sway_inc = include_directories('include')/sway_inc = include_directories('$1/include')/g" meson.build
+# # sed -i "s/include_directories: [sway_inc],/include_directories: sway_inc,/g" ./sway/meson.build
+# sed -i 's/#include "list.h"/#include "../include/list.h"/g' ./sway/config.c
+# sed -i "s/list_insert(/sway_list_insert(/g" ./sway/config.c
+# sed -i "s/list_insert(/sway_list_insert(/g" ./sway/tree/workspace.c
+# sed -i "s/list_insert(/sway_list_insert(/g" ./sway/tree/container.c
+# export CFLAGS="$CFLAGS -static -I$1/include"
+# export LDFLAGS="$LDFLAGS -static"
+
 list_operation=$(find . -type f -name "list.h")
 echo "list_operation: $list_operation"
-export CFLAGS="$CFLAGS -static -I$1/include"
-export LDFLAGS="$LDFLAGS -static"
+
+# Build fails with gcc 12 due to -Werror.
+export CFLAGS="$CFLAGS -Wno-error"
 export PKG_CONFIG_SYSROOT_DIR=
 
 kiss-meson-config > meson.config
@@ -26,6 +40,8 @@ kiss-meson-config > meson.config
 meson \
     --prefix=/usr \
     --cross-file=meson.config \
+    -Dseatd:builtin=enabled \
+    -Dseatd:libseat-builtin=enabled \
     -Ddefault_library=static \
     -Dxwayland=disabled \
     -Ddefault-wallpaper=false \
@@ -34,7 +50,27 @@ meson \
     -Dfish-completions=false \
     . build
 
-    # -Ddefault_library=static \
+    # -Dseatd:builtin=enabled \
 
 ninja -C build
+
+swaywm=$(find . -type f -name "sway")
+for I in $swaywm; do
+    printf "%-20s = %s\n" "swaywm" "$I"
+done
+list_folder=$(ls build/sway)
+for I in $list_folder; do
+    printf "%-20s = %s\n" "ls build/sway" "$I"
+done
+
+install -m755 "build/sway/sway" "/usr/bin/sway"
+list_config_in=$(find . -type f -name "config.in")
+for I in $list_config_in; do
+    printf "%-20s = %s\n" "config.in" "$I"
+done
+
+cp -f config.in "/etc/sway/config"
+
 ninja -C build install
+
+[ -f "/usr/lib/libwlroots.so.11" ] && ln -sf /usr/lib/libwlroots.so.11 /usr/lib/libwlroots.so.10
