--- a/wayland/wlroots/build
+++ b/wayland/wlroots/build
@@ -1,6 +1,7 @@
 #!/usr/bin/env sh
 
-# sed -i "s/all_backends = ['drm', 'libinput', 'x11']/all_backends = ['drm', 'libinput']/g" backend/meson.build
+sed -i "s/all_backends = \['drm', 'libinput', 'x11'\]/all_backends = \['drm', 'libinput'\]/g" backend/meson.build
+sed -i "s/backends = get_option('backends')/backends = \['drm', 'libinput'\]/g" backend/meson.build
 sed -i "s/subdir('examples')/# subdir('examples')/g" meson.build
 
 export CFLAGS="-Wno-unused-but-set-variable"
@@ -8,34 +9,21 @@ export PKG_CONFIG_SYSROOT_DIR=
 
 kiss-meson-config > meson.config
 
-# if [ -d "objects" ]; then
-#     meson \
-#         --reconfigure \
-#         --prefix=/usr \
-#         --cross-file="meson.config" \
-#         -Ddefault_library=both \
-#         -Dexamples=false \
-#         -Dxcb-errors=disabled \
-#         -Dxwayland=disabled \
-#         -Drenderers=gles2 \
-#         -Dbackends=drm,libinput \
-#         . objects
-# 
-# else
-    meson \
-        --prefix=/usr \
-        -Ddefault_library=both \
-        -Dexamples=false \
-        -Dxcb-errors=disabled \
-        -Dxwayland=disabled \
-        -Drenderers=gles2 \
-        -Dbackends=drm,libinput \
-        . objects
-# fi
+meson \
+    --prefix=/usr \
+    --cross-file="meson.config" \
+    -Dseatd:libseat-builtin=enabled \
+    -Ddefault_library=both \
+    -Dexamples=false \
+    -Dxcb-errors=disabled \
+    -Dxwayland=disabled \
+    -Drenderers=gles2 \
+    -Dbackends=drm,libinput \
+    . objects
 
-        # --cross-file="meson.config" \
-        # -Dx11-backend=disabled \
-        # -Dbackends=drm,libinput \
+    # -Dseatd:builtin=enabled \
+    # -Dx11-backend=disabled \
 
 ninja -C objects
 ninja -C objects install
+
