--- a/extra/neovim/build
+++ b/extra/neovim/build
@@ -8,10 +8,11 @@ echo "DESTDIR updated: $DESTDIR"
 echo "PREFIX updated:  $DESTDIR"
 # Due to some changes in the package manager/pigz, we have to...
 # unset DESTDIR
-mkdir -p "$PWD/bin"
-ln -sf /usr/bin/pigz  "$PWD/bin/gunzip"
-ln -sf /usr/bin/gmake "$PWD/bin/make"
-export PATH="$PWD/bin:$PATH"
+export USE_GMAKE=1
+# mkdir -p "$PWD/bin"
+# ln -sf /usr/bin/pigz  "$PWD/bin/gunzip"
+# ln -sf /usr/bin/gmake "$PWD/bin/make"
+# export PATH="$PWD/bin:$PATH"
 
 # repo update rejected!
 TEMP="$PWD"
